--- a/Mobile/AnalyticsMobileClient/package.json
+++ b/Mobile/AnalyticsMobileClient/package.json
@@ -15,13 +15,16 @@
     "expo-asset": "~8.10.1",
     "expo-clipboard": "~4.3.1",
     "expo-file-system": "~15.4.5",
+    "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "^2.6.0",
     "lz-string": "^1.5.0",
     "react": "18.2.0",
     "react-native": "^0.73.0",
+    "react-native-paper": "^5.12.3",
     "react-native-prompt-android": "^1.1.0",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-webview": "^13.6.3"
   },
   "devDependencies": {
