--- a/UploadedIcons/.htaccess
+++ b/UploadedIcons/.htaccess
@@ -1,3 +1,4 @@
-RewriteEngine On
-RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} !-f
-RewriteRule \.(gif|jpe?g|png|bmp) ../Images/DefaultMetricIcon.png [NC,L]
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ get_icon.php?path=$1 [NC,L,QSA]
