Update Build Tool To Support Docker

--- a/Plugins/DevOnly/Build Tool/Docker/Dockerfile
+++ b/Plugins/DevOnly/Build Tool/Docker/Dockerfile
@@ -3,6 +3,11 @@ WORKDIR /var/www
 
 RUN a2enmod rewrite
 RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
+RUN apt-get update && apt-get install -y cron
 
 COPY Build/ html
+
+WORKDIR /var/www/html
+COPY .env ./
+
 EXPOSE 80
